--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jquery": "^3.3.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-svg": "^7.2.7"
   },
   "scripts": {
     "start": "react-scripts start",
